syntax = "proto3";
package gw2ms;
import "google/protobuf/empty.proto";
option cc_generic_services = true;


service Gw2msService {
  rpc PlayerService (google.protobuf.Empty) returns (google.protobuf.Empty);
}
